@@ -59,11 +59,5 @@
 #define HAVE_DEBUG_OUTPUT       1
  */
 
-#define HAVE_V1_API		1
-
-/* Enable version 2 API
-#define HAVE_V2_API		1
-*/
-
 #endif
 
