@@ -1,9 +1,9 @@
 Name: liblnk
 Version: @VERSION@
 Release: 1
-Summary: Library to support the Windows Shortcut (LNK) file format
+Summary: Library to support the Windows Shortcut File (LNK) format
 Group: System Environment/Libraries
-License: LGPLWindows Shortcut (LNK) file format
+License: LGPLWindows Shortcut File (LNK) format
 Source: %{name}-%{version}.tar.gz
 URL: http://liblnk.sourceforge.net
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
@@ -22,12 +22,12 @@ Requires: liblnk = %{version}-%{release}
 Header files and libraries for developing applications for liblnk.
 
 %package tools
-Summary: Several tools for accessing Windows Shortcut (LNK) files
+Summary: Several tools for accessing Windows Shortcut Files (LNK)
 Group: Applications/System
 Requires: liblnk = %{version}-%{release}
 
 %description tools
-Several tools for accessing Windows Shortcut (LNK) files
+Several tools for accessing Windows Shortcut Files (LNK)
 
 %prep
 %setup -q
