@@ -1,5 +1,5 @@
 /*
- * The location information definition of a Windows Shortcut (LNK) file
+ * The location information definition of a Windows Shortcut File (LNK)
  *
  * Copyright (c) 2009, Joachim Metz <forensics@hoffmannbv.nl>,
  * Hoffmann Investigations. All rights reserved.
