@@ -3,7 +3,7 @@
 .Os liblnk
 .Sh NAME
 .Nm liblnk.h
-.Nd Library to support the Windows Shortcut (LNK) file format
+.Nd Library to support the Windows Shortcut File (LNK) format
 .Sh LIBRARY
 .Lb liblnk
 .Sh SYNOPSIS
