@@ -3,21 +3,21 @@
 .Os liblnk
 .Sh NAME
 .Nm lnkinfo
-.Nd determines information about a Windows Shortcut (LNK) file
+.Nd determines information about a Windows Shortcut File (LNK)
 .Sh SYNOPSIS
 .Nm lnkinfo
 .Op Fl ahvV
 .Va Ar source
 .Sh DESCRIPTION
 .Nm lnkinfo
-is a utility to determine information about a Windows Shortcut (LNK) file
+is a utility to determine information about a Windows Shortcut File (LNK)
 .Pp
 .Nm lnkinfo
 is part of the
 .Nm liblnk
 package.
 .Nm liblnk
-is a library to support the Windows Shortcut (LNK) file format
+is a library to support the Windows Shortcut File (LNK) format
 .Pp
 .Ar source
 is the source file.
