@@ -1,6 +1,7 @@
 EXTRA_DIST = \
 	libbfio/libbfio.vcproj \
 	liberror/liberror.vcproj \
+	libfdatetime/libfdatetime.vcproj \
 	liblnk_dll/liblnk_dll.vcproj \
 	libnotify/libnotify.vcproj \
 	libsystem/libsystem.vcproj \
