@@ -2,10 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="lnkinfo"
-	ProjectGUID="{A7545354-5D50-49F6-A3D0-1F97F6228955}"
-	RootNamespace="lnkinfo"
-	Keyword="Win32Proj"
+	Name="libfdatetime"
+	ProjectGUID="{25C60507-39C6-4564-912D-DA2E7482A00F}"
+	RootNamespace="libfdatetime"
 	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
@@ -20,9 +19,7 @@
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
-			ConfigurationType="1"
-			CharacterSet="1"
-			WholeProgramOptimization="1"
+			ConfigurationType="4"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -41,13 +38,10 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\liberror;..\..\libuna;..\..\libbfio;..\..\libfdatetime;..\..\libsystem"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBUNA;HAVE_LOCAL_LIBBFIO;HAVE_LOCAL_LIBFDATETIME;LIBLNK_DLL_IMPORT"
+				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\liberror"
+				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBFDATETIME"
 				RuntimeLibrary="2"
-				UsePrecompiledHeader="0"
 				WarningLevel="4"
-				Detect64BitPortabilityProblems="false"
-				DebugInformationFormat="3"
 				CompileAs="1"
 			/>
 			<Tool
@@ -60,22 +54,13 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLinkerTool"
-				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;"
-				GenerateDebugInformation="true"
-				SubSystem="1"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
-				TargetMachine="1"
+				Name="VCLibrarianTool"
+				OutputFile="$(OutDir)\libfdatetime.lib"
+				ModuleDefinitionFile=""
+				IgnoreAllDefaultLibraries="false"
 			/>
 			<Tool
 				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -85,9 +70,6 @@
 			/>
 			<Tool
 				Name="VCFxCopTool"
-			/>
-			<Tool
-				Name="VCAppVerifierTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -103,23 +85,23 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\lnktools\filetime.c"
+				RelativePath="..\..\libfdatetime\libfdatetime_date_time_values.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\lnktools\guid.c"
+				RelativePath="..\..\libfdatetime\libfdatetime_error.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\lnktools\lnkinfo.c"
+				RelativePath="..\..\libfdatetime\libfdatetime_fat_date_time.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\lnktools\lnkinput.c"
+				RelativePath="..\..\libfdatetime\libfdatetime_filetime.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\lnktools\lnkoutput.c"
+				RelativePath="..\..\libfdatetime\libfdatetime_support.c"
 				>
 			</File>
 		</Filter>
@@ -129,19 +111,39 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\..\lnktools\filetime.h"
+				RelativePath="..\..\libfdatetime\libfdatetime_date_time_values.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\lnktools\guid.h"
+				RelativePath="..\..\libfdatetime\libfdatetime_definitions.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\lnktools\lnkinput.h"
+				RelativePath="..\..\libfdatetime\libfdatetime_error.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\lnktools\lnkoutput.h"
+				RelativePath="..\..\libfdatetime\libfdatetime_extern.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfdatetime\libfdatetime_fat_date_time.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfdatetime\libfdatetime_filetime.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfdatetime\libfdatetime_string.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfdatetime\libfdatetime_support.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfdatetime\libfdatetime_types.h"
 				>
 			</File>
 		</Filter>
