@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="liblnk_dll"
 	ProjectGUID="{B5225323-AC67-411D-8FBA-199E9467FAB5}"
 	RootNamespace="liblnk"
@@ -38,8 +38,8 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\liberror;..\..\libuna;..\..\liblnk"
-				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBUNA;LIBLNK_DLL_EXPORT"
+				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\liberror;..\..\libnotify;..\..\libuna;..\..\libbfio;..\..\libfdatetime;..\..\liblnk"
+				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBUNA;HAVE_LOCAL_LIBBFIO;HAVE_LOCAL_LIBFDATETIME;LIBLNK_DLL_EXPORT"
 				RuntimeLibrary="2"
 				WarningLevel="4"
 				CompileAs="1"
@@ -97,11 +97,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\liblnk\liblnk_array_type.c"
+				RelativePath="..\..\liblnk\liblnk_data_string.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\liblnk\liblnk_error.h"
+				RelativePath="..\..\liblnk\liblnk_debug.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\liblnk\liblnk_error.c"
 				>
 			</File>
 			<File
@@ -109,23 +113,31 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\liblnk\liblnk_file_information.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\liblnk\liblnk_guid.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\liblnk\liblnk_io_handle.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\liblnk\liblnk_item.c"
+				RelativePath="..\..\liblnk\liblnk_link_information.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\liblnk\liblnk_item_values.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\liblnk\liblnk_list_type.c"
+				RelativePath="..\..\liblnk\liblnk_location_information.c"
 				>
 			</File>
 			<File
 				RelativePath="..\..\liblnk\liblnk_notify.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\liblnk\liblnk_shell_item_identifiers.c"
 				>
 			</File>
 			<File
@@ -139,7 +151,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\..\liblnk\liblnk_array_type.h"
+				RelativePath="..\..\liblnk\liblnk_data_string.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\liblnk\liblnk_debug.h"
 				>
 			</File>
 			<File
@@ -159,15 +175,19 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\liblnk\liblnk_file_information.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\liblnk\liblnk_guid.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\liblnk\liblnk_io_handle.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\liblnk\liblnk_item.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\liblnk\liblnk_item_values.h"
+				RelativePath="..\..\liblnk\liblnk_libbfio.h"
 				>
 			</File>
 			<File
@@ -175,11 +195,19 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\liblnk\liblnk_list_type.h"
+				RelativePath="..\..\liblnk\liblnk_link_information.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\liblnk\liblnk_location_information.h"
 				>
 			</File>
 			<File
 				RelativePath="..\..\liblnk\liblnk_notify.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\liblnk\liblnk_shell_item_identifiers.h"
 				>
 			</File>
 			<File
@@ -195,7 +223,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\liblnk\lnk_item.h"
+				RelativePath="..\..\liblnk\lnk_location_information.h"
 				>
 			</File>
 		</Filter>
